package bigtalkdesignMod.v14.v14_5;

public class ConcreteSubject extends Subject {

}
